# pilrc

./: .indent.pro  CharLatin.h  Makefile  Makefile.am  Makefile.generic  Makefile.gui  PilRc_PRCExp.bat  README.txt  aclocal.m4  autogen.sh  bitmap.c  bitmap.h  chars.h  compile.bat  configure.in  font.c  font.h  header.h  imakefile  lex.c  lex.h  macres.h  main.c  makeKbd.c  makeKbd.h  makefile.os2  pilrc.c  pilrc.dep  pilrc.dsp  pilrc.dsw  pilrc.h  pilrc.mak  pilrc.mcp  pilrc.plg  pilrc.rc  pilrc.spec  plex.c  plex.h  prc.c  prc.h  (+13 more)
.github/workflows/: build.yaml
contrib/: PilRc_PRCExp.reg  package
doc/: archive.html  changes.txt  contrib.html  download.html  history.html  index.htm  index.html  manual.html  pilrc.htm  readme.dos  readme.os2  readme.x
example/: Makefile  README.txt  bigrestest.rcp  device.c  device.h  fnav_test.rcp  font.txt  foo.bat  gccfix.c  gccfix.h  iconsize.rcp  mkasm.bat  mkasm.cmd  palm.c  palm.h  pilrcasc.pbm  pilrcbin.pbm  pilrctst.asm  pilrctst.c  pilrctst.def  pilrctst.h  pilrctst.inc  pilrctst.prc  pilrctst.rcp  readme.txt  resource.h  runme.bat  runme.cmd  string.txt
fonts/: Makefile  README-pilfont.txt
ppmquant/: palette-256.ppm
tools/: build-deb.sh
unix/: Makefile.am  acinclude.m4  configure.ac  pilrc.build  pilrc.spec
vslick/: rcp.vlx
win32_cw/: pilrc.mcp  pilrc.rc
