#
# @(#)configure.in
#
# Copyright 1997-1999, Wes Cherry   (mailto:wesc@technosis.com)
#           2000-2001, Aaron Ardiri (mailto:aaron@ardiri.com)
# All rights reserved.
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation;  either version 2, or (at your option)
# any version.
#
# This program is distributed in the hope that it will be useful,  but
# WITHOUT  ANY  WARRANTY;   without  even   the  implied  warranty  of 
# MERCHANTABILITY  or FITNESS FOR A  PARTICULAR  PURPOSE.  See the GNU
# General Public License for more details.
#
# You  should have  received a  copy of the GNU General Public License
# along with this program;  if not,  please write to the Free Software 
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# Revisions:
# ==========
#
# pre 18-Jun-2000 <numerous developers>
#                 creation
#     18-Jun-2000 Aaron Ardiri
#                 GNU GPL documentation additions
#

AC_INIT(pilrc.c)
AM_INIT_AUTOMAKE(pilrc, 2.8p6)

AC_PROG_CC
AC_PROG_RANLIB

AC_ARG_ENABLE(pilrcui,
  [  --enable-pilrcui        build pilrcui (needs gtk; default: enabled)])

AC_MSG_CHECKING([whether pilrcui should be built])
if test -z "$enable_pilrcui" -o "$enable_pilrcui" = yes
then
    AC_MSG_RESULT([yes])
    AM_PATH_GTK(1.2.0,
    [
    AM_CONDITIONAL(PILRCUI, true)
    ],
    [
    AM_CONDITIONAL(PILRCUI, false)
    ])
else
    AC_MSG_RESULT([no])
    AM_CONDITIONAL(PILRCUI, false)
fi

# Check for warnings flag if gcc was detected.
if test "x$ac_cv_prog_gcc" = "xyes"; then
  CFLAGS="$CFLAGS -Wall"
fi

AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(char *)

AC_DEFINE(UNIX)

AC_OUTPUT(Makefile)
